# psiconv

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
compat/: Makefile  Makefile.am  Makefile.in  compat.h  dummy.c
docs/: Makefile  Makefile.am  Makefile.in  ascii  configuration  html4  parsing  unicode  xhtml
etc/: Makefile  Makefile.am  Makefile.in  psiconv.conf.eg
examples/: Clipart  MBM  Makefile  Makefile.am  Makefile.in  Sheet  Sketch  Word
formats/: Makefile  Makefile.am  Makefile.in  generate_ascii.sh  generate_html4.sh  generate_xhtml.sh  html4_links.sh  index_html.sh  psiconv.conf  xhtml_links.sh
formats/psion/: ASCII_Codes.psi  Application_ID_Section.psi  Basic_Elements.psi  Basic_Structures.psi  Clip_Art_File.psi  Embedded_Object_Section.psi  File_Structure.psi  Fonts.psi  Header_Section.psi  Identifiers.psi  Index.psi  Introduction.psi  Layout_Codes.psi  MBM_File.psi  Page_Layout_Section.psi  Paint_Data_Section.psi  Password_Section.psi  Record_File.psi  Record_Section.psi  Section_Table_Offset_Section.psi  Section_Table_Section.psi  Sheet_Basic_Structures.psi  Sheet_Cell_List.psi  Sheet_File.psi  Sheet_Formula_List.psi  Sheet_Graph_Description.psi  Sheet_Graph_List_Section.psi  Sheet_Graph_Region.psi  Sheet_Graph_Section.psi  Sheet_Grid_Section.psi  Sheet_Info_Section.psi  Sheet_Line_Section.psi  Sheet_Name_Section.psi  Sheet_Status_Section.psi  Sheet_Variable_List.psi  Sheet_Workbook_Section.psi  Sheet_Worksheet.psi  Sheet_Worksheet_List.psi  Sketch_File.psi  Sketch_Section.psi  (+10 more)
formats/xhtml/: ASCII_Codes.html  Application_ID_Section.html  Basic_Elements.html  Basic_Structures.html  Clip_Art_File.html  Embedded_Object_Section.html  File_Structure.html  Fonts.html  Header_Section.html  Identifiers.html  Index.html  Introduction.html  Layout_Codes.html  MBM_File.html  Page_Layout_Section.html  Paint_Data_Section.html  Password_Section.html  Record_File.html  Record_Section.html  Section_Table_Offset_Section.html  Section_Table_Section.html  Sheet_Basic_Structures.html  Sheet_Cell_List.html  Sheet_File.html  Sheet_Formula_List.html  Sheet_Graph_Description.html  Sheet_Graph_List_Section.html  Sheet_Graph_Region.html  Sheet_Graph_Section.html  Sheet_Grid_Section.html  Sheet_Info_Section.html  Sheet_Line_Section.html  Sheet_Name_Section.html  Sheet_Status_Section.html  Sheet_Variable_List.html  Sheet_Workbook_Section.html  Sheet_Worksheet.html  Sheet_Worksheet_List.html  Sketch_File.html  Sketch_Section.html  (+10 more)
formats/xhtml/.temp/: ASCII_Codes.html  Application_ID_Section.html  Basic_Elements.html  Basic_Structures.html  Clip_Art_File.html  Embedded_Object_Section.html  File_Structure.html  Fonts.html  Header_Section.html  Identifiers.html  Index.html  Introduction.html  Layout_Codes.html  MBM_File.html  Page_Layout_Section.html  Paint_Data_Section.html  Password_Section.html  Record_File.html  Record_Section.html  Section_Table_Offset_Section.html  Section_Table_Section.html  Sheet_Basic_Structures.html  Sheet_Cell_List.html  Sheet_File.html  Sheet_Formula_List.html  Sheet_Graph_Description.html  Sheet_Graph_List_Section.html  Sheet_Graph_Region.html  Sheet_Graph_Section.html  Sheet_Grid_Section.html  Sheet_Info_Section.html  Sheet_Line_Section.html  Sheet_Name_Section.html  Sheet_Status_Section.html  Sheet_Variable_List.html  Sheet_Workbook_Section.html  Sheet_Worksheet.html  Sheet_Worksheet_List.html  Sketch_File.html  Sketch_Section.html  (+11 more)
lib/: Makefile  Makefile.am  Makefile.in
lib/psiconv/: Makefile  Makefile.am  Makefile.in  buffer.c  buffer.h  checkuid.c  common.h  configuration.c  configuration.h  data.c  data.h  error.c  error.h  general.h  general.h.in  generate.h  generate_common.c  generate_driver.c  generate_image.c  generate_layout.c  generate_page.c  generate_routines.h  generate_simple.c  generate_texted.c  generate_word.c  image.c  image.h  list.c  list.h  misc.c  parse.h  parse_common.c  parse_driver.c  parse_formula.c  parse_image.c  parse_layout.c  parse_page.c  parse_routines.h  parse_sheet.c  parse_simple.c  (+5 more)
lib/psiconv/.deps/: libpsiconv_la-buffer.Plo  libpsiconv_la-checkuid.Plo  libpsiconv_la-configuration.Plo  libpsiconv_la-data.Plo  libpsiconv_la-error.Plo  libpsiconv_la-generate_common.Plo  libpsiconv_la-generate_driver.Plo  libpsiconv_la-generate_image.Plo  libpsiconv_la-generate_layout.Plo  libpsiconv_la-generate_page.Plo  libpsiconv_la-generate_simple.Plo  libpsiconv_la-generate_texted.Plo  libpsiconv_la-generate_word.Plo  libpsiconv_la-image.Plo  libpsiconv_la-list.Plo  libpsiconv_la-misc.Plo  libpsiconv_la-parse_common.Plo  libpsiconv_la-parse_driver.Plo  libpsiconv_la-parse_formula.Plo  libpsiconv_la-parse_image.Plo  libpsiconv_la-parse_layout.Plo  libpsiconv_la-parse_page.Plo  libpsiconv_la-parse_sheet.Plo  libpsiconv_la-parse_simple.Plo  libpsiconv_la-parse_texted.Plo  libpsiconv_la-parse_word.Plo  libpsiconv_la-unicode.Plo
lib/psiconv/.libs/: libpsiconv.lai
program/: Makefile  Makefile.am  Makefile.in
program/extra/: Makefile  Makefile.am  Makefile.in  README  checkuid  checkuid.c  empty  empty.c  rewrite  rewrite.c
program/extra/.deps/: checkuid.Po  empty.Po  rewrite.Po
program/extra/.libs/: empty  rewrite
program/psiconv/: Makefile  Makefile.am  Makefile.in  gen.h  gen_html4.c  gen_html5.c  gen_image.c  gen_txt.c  gen_xhtml.c  general.c  general.h  magick-aux.c  magick-aux.h  psiconv  psiconv.c  psiconv.h  psiconv.man
program/psiconv-config/: Makefile  Makefile.am  Makefile.in  psiconv-config  psiconv-config.in  psiconv-config.man  psiconv-config.man.in
program/psiconv/.deps/: gen_html4.Po  gen_html5.Po  gen_image.Po  gen_txt.Po  gen_xhtml.Po  general.Po  magick-aux.Po  psiconv.Po
program/psiconv/.libs/: psiconv
